--- a/Lingarr.Server/appsettings.json
+++ b/Lingarr.Server/appsettings.json
@@ -5,14 +5,11 @@
       "Microsoft.AspNetCore": "Warning",
       "System.Net.Http.HttpClient": "Warning",
       "Microsoft.EntityFrameworkCore": "Warning",
-      "Hangfire" : "Warning"
+      "Hangfire": "Warning"
     }
   },
   "AllowedHosts": "*",
   "DbConnection": "mysql",
-  "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;Port=1433;Database=LingarrMysql;Uid=LingarrMysql;Pwd=Secret1234;Allow User Variables=True"
-  },
+  "ConnectionStrings": {},
   "SqliteDbPath": "/app/config/local.db"
 }
-
