--- a/Lingarr.Server/appsettings.Development.json
+++ b/Lingarr.Server/appsettings.Development.json
@@ -4,10 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore": "Warning",
-      "Hangfire": "Warning"
+      "Hangfire" : "Warning"
     }
   },
   "DbConnection": "mysql",
-  "ConnectionStrings": {},
+  "ConnectionStrings": {
+    "MySqlConnection": "Server=localhost;Port=1433;Database=LingarrMysql;Uid=LingarrMysql;Pwd=Secret1234;Allow User Variables=True"
+  },
   "SqliteDbPath": "/app/config/local.db"
 }
