Improve detection of single-letter garbage in subtitles
Enhanced SubtitleFormatterService to better identify and remove single-character lines that are not valid words or numbers, addressing issues with vertical text splitting and leftover garbage. Updated unit tests to cover new heuristics for single-letter input handling.

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ local_nas.db
 
 # Ansible
 ansible_env/
+EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E23 - The Origin of Blind Obedience 2 - \[v2 Bluray-1080p Proper\]\[Opus 2.0\]\[x265\]-Vodes.eng.English-(Signs-&-Songs).srt
+EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E17 - Kyoto Sister School Exchange Event Group Battle 3 - \[v2 Bluray-1080p Proper\]\[Opus 2.0\]\[x265\]-Vodes.English-\[Kaizoku\].pl.-ai-sztuczna-inteligencja-.srt
+EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E15 - Kyoto Sister School Exchange Event Group Battle 1 - \[v2 Bluray-1080p Proper\]\[Opus 2.0\]\[x265\]-Vodes.eng.English-(Signs-&-Songs).srt
+EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E14 - Kyoto Sister School Exchange Event Group Battle 0 - \[v2 Bluray-1080p Proper\]\[Opus 2.0\]\[x265\]-Vodes.eng.English-\[Kaizoku\].srt
+EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E13 - Tomorrow \[v2 Bluray-1080p Proper\]\[Opus 2.0\]\[x265\]-Vodes.English-\[Kaizoku\].pl.-ai-sztuczna-inteligencja-.srt
+EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E13 - Tomorrow \[v2 Bluray-1080p Proper\]\[Opus 2.0\]\[x265\]-Vodes.eng.English-\[Kaizoku\].srt
