--- a/Lingarr.Core/Lingarr.Core.csproj
+++ b/Lingarr.Core/Lingarr.Core.csproj
@@ -11,7 +11,7 @@
       <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.11" />
-      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
     </ItemGroup>
 
 </Project>
