--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,6 @@
 
 networks:
   lingarr:
-    
     external: true
 
 services:
@@ -20,11 +19,11 @@ services:
         BUILD_CONFIGURATION: ${BUILD_CONFIGURATION:-Debug}
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - DB_CONNECTION=mysql
-      - DB_HOST=Lingarr.Mysql
-      - DB_PORT=3306
-      - DB_DATABASE=LingarrMysql
-      - DB_USERNAME=LingarrMysql
+      - DB_CONNECTION=postgresql
+      - DB_HOST=Lingarr.Postgres
+      - DB_PORT=5432
+      - DB_DATABASE=lingarr
+      - DB_USERNAME=lingarr
       - DB_PASSWORD=Secret1234
       - SERVICE_TYPE=libretranslate
       - LIBRE_TRANSLATE_URL=http://libretranslate:5000
@@ -42,7 +41,7 @@ services:
     networks:
       - lingarr
     depends_on:
-      Lingarr.Mysql:
+      Lingarr.Postgres:
         condition: service_healthy
 
   Lingarr.Client:
@@ -77,41 +76,26 @@ services:
     healthcheck:
       test: ["CMD-SHELL", "./venv/bin/python scripts/healthcheck.py"]
 
-  Lingarr.Mysql:
-    image: mariadb:10.5
-    container_name: Lingarr.Mysql
+  Lingarr.Postgres:
+    image: postgres:16-alpine
+    container_name: Lingarr.Postgres
     tty: true
     ports:
-      - "1433:3306"
+      - "5432:5432"
     environment:
-      MYSQL_DATABASE: LingarrMysql
-      MYSQL_USER: LingarrMysql
-      MYSQL_PASSWORD: Secret1234
-      MYSQL_ROOT_PASSWORD: Secret1234
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mariadb
+      POSTGRES_DB: lingarr
+      POSTGRES_USER: lingarr
+      POSTGRES_PASSWORD: Secret1234
     networks:
       - lingarr
-    command: mysqld --sql_mode=""
+    volumes:
+      - lingarr_postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: "mysql $$MYSQL_DATABASE -u$$MYSQL_USER -p$$MYSQL_PASSWORD -e 'SELECT 1;'"
+      test: ["CMD-SHELL", "pg_isready -U lingarr -d lingarr"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  Lingarr.PHPMyAdmin:
-    image: phpmyadmin/phpmyadmin:5.0.1
-    container_name: Lingarr.PHPMyAdmin
-    environment:
-      PMA_HOST: Lingarr.Mysql
-      PMA_USER: LingarrMysql
-      PMA_PASSWORD: Secret1234
-      UPLOAD_LIMIT: 500M
-    ports:
-      - "9878:80"
-    networks:
-      - lingarr
-        
   radarr:
     image: ghcr.io/hotio/radarr:nightly
     container_name: radarr
@@ -138,7 +122,10 @@ services:
       - 8989:8989
     networks:
       - lingarr
-        
+
+volumes:
+  lingarr_postgres_data:
+
 #  localai:
 #    container_name: localai
 #    image: localai/localai:latest-aio-cpu
