--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E13 - Tomorrow \[v2 Bluray-1080p Pr
 EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E13 - Tomorrow \[v2 Bluray-1080p Proper\]\[Opus 2.0\]\[x265\]-Vodes.eng.English-\[Kaizoku\].srt
 EXAMPLE EPISODES/Jujutsu Kaisen (2020) - S02E02 - Hidden Inventory 2 \[Bluray-1080p\]\[Opus 2.0\]\[x265\]-Vodes.mkv
 .opencode/opencode.json
+Debug.txt
