--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ EXAMPLE SUBTITLES/Jujutsu Kaisen (2020) - S01E13 - Tomorrow \[v2 Bluray-1080p Pr
 EXAMPLE EPISODES/Jujutsu Kaisen (2020) - S02E02 - Hidden Inventory 2 \[Bluray-1080p\]\[Opus 2.0\]\[x265\]-Vodes.mkv
 .opencode/opencode.json
 Debug.txt
+DEBUG/Debug2.txt
